{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 330,
  "lineage": "dde2305a-b037-86b2-dcfc-48b3437fd404",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b4817512ed4831e",
            "arn": "arn:aws:ec2:us-east-1:769265544200:elastic-ip/eipalloc-09b4817512ed4831e",
            "association_id": "eipassoc-0d813985d7f2e516e",
            "domain": "vpc",
            "id": "eipalloc-09b4817512ed4831e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f3f60d0cbcc82dd8",
            "private_dns": "ip-10-0-1-104.ec2.internal",
            "private_ip": "10.0.1.104",
            "public_dns": "ec2-52-206-2-77.compute-1.amazonaws.com",
            "public_ip": "52.206.2.77",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-nat-eip-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-nat-eip-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769265544200:internet-gateway/igw-00d2a994178f7c3ba",
            "id": "igw-00d2a994178f7c3ba",
            "owner_id": "769265544200",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-igw-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-igw-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "vpc_id": "vpc-07c5f197e1ba8ff33"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:769265544200:loadbalancer/app/devops-project-alb-dev/7dcd748bce533878",
            "arn_suffix": "app/devops-project-alb-dev/7dcd748bce533878",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "devops-project-alb-dev-1490956410.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:769265544200:loadbalancer/app/devops-project-alb-dev/7dcd748bce533878",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-project-alb-dev",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0db484d2e9121cd0f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-032da562e289c4ddf"
              },
              {
                "subnet_id": "subnet-03ec392253d936432"
              },
              {
                "subnet_id": "subnet-0b038d3bb91fb6c55"
              }
            ],
            "subnets": [
              "subnet-00200caabb5439399",
              "subnet-08ec32cd1360098e4",
              "subnet-094525b7904594e1a"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-alb-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-alb-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "vpc_id": "vpc-08453b02e36efe385",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:769265544200:listener/app/devops-project-alb-dev/7dcd748bce533878/61bf355f5d612872",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:769265544200:listener/app/devops-project-alb-dev/7dcd748bce533878/61bf355f5d612872",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:769265544200:loadbalancer/app/devops-project-alb-dev/7dcd748bce533878",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Project": "devops-project"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "devops-project",
              "Team": "devops"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:769265544200:targetgroup/alb-20260516103556306600000005/196a1526de368da9",
            "arn_suffix": "targetgroup/alb-20260516103556306600000005/196a1526de368da9",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "//php-login/index.php",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:769265544200:targetgroup/alb-20260516103556306600000005/196a1526de368da9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-20260516103556306600000005",
            "name_prefix": "alb-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-tg-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-tg-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07c5f197e1ba8ff33"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b4817512ed4831e",
            "association_id": "eipassoc-0d813985d7f2e516e",
            "connectivity_type": "public",
            "id": "nat-06c6ca4eda48f1b73",
            "network_interface_id": "eni-0f3f60d0cbcc82dd8",
            "private_ip": "10.0.1.104",
            "public_ip": "52.206.2.77",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08ec32cd1360098e4",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-nat-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-nat-dev",
              "Project": "devops-project",
              "Team": "devops"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769265544200:route-table/rtb-0a070b8d4d7cd46c9",
            "id": "rtb-0a070b8d4d7cd46c9",
            "owner_id": "769265544200",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06c6ca4eda48f1b73",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-rt-private-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-rt-private-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c5f197e1ba8ff33"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769265544200:route-table/rtb-0a89cef40ac02a55c",
            "id": "rtb-0a89cef40ac02a55c",
            "owner_id": "769265544200",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00d2a994178f7c3ba",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-rt-public-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-rt-public-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c5f197e1ba8ff33"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02689299e211fad11",
            "route_table_id": "rtb-0a070b8d4d7cd46c9",
            "subnet_id": "subnet-0645c7af9628b44a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060a028f9eb8f7fce",
            "route_table_id": "rtb-0a070b8d4d7cd46c9",
            "subnet_id": "subnet-06032ee9bbd409a88"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dee95f51447392a8",
            "route_table_id": "rtb-0a070b8d4d7cd46c9",
            "subnet_id": "subnet-04a6403dd1e7386a7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0feb31e4b7125387d",
            "route_table_id": "rtb-0a89cef40ac02a55c",
            "subnet_id": "subnet-08ec32cd1360098e4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09308bead6a672467",
            "route_table_id": "rtb-0a89cef40ac02a55c",
            "subnet_id": "subnet-00200caabb5439399"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054fee5bfe87c61c7",
            "route_table_id": "rtb-0a89cef40ac02a55c",
            "subnet_id": "subnet-094525b7904594e1a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769265544200:security-group/sg-0db484d2e9121cd0f",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db484d2e9121cd0f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "devops-project-alb-dev20260516103556299400000004",
            "name_prefix": "devops-project-alb-dev",
            "owner_id": "769265544200",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-alb-sg-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-alb-sg-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c5f197e1ba8ff33"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "2c591016",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769265544200:security-group/sg-07fb40f6c993a1b0a",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07fb40f6c993a1b0a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "devops-project-alb-dev20260515215430014600000001",
            "name_prefix": "devops-project-alb-dev",
            "owner_id": "769265544200",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "devops-project-alb-sg-dev",
              "Project": "devops-project"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-alb-sg-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-08453b02e36efe385"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769265544200:security-group/sg-00631478bc70cbea1",
            "description": "Security group pour EFS mount targets",
            "egress": [],
            "id": "sg-00631478bc70cbea1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "NFS depuis les pods K3s",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ca0d9a2d4b5c242d",
                  "sg-0ef6b2a0240f5c8f1"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "devops-project-efs-dev2026051610360489840000000a",
            "name_prefix": "devops-project-efs-dev",
            "owner_id": "769265544200",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-efs-sg-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-efs-sg-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c5f197e1ba8ff33"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.k3s_agent",
            "aws_security_group.k3s_server",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769265544200:security-group/sg-0fd506f1b1c7d3921",
            "description": "Security group for EKS cluster control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd506f1b1c7d3921",
            "ingress": [],
            "name": "devops-project-eks-cluster-dev20260516103557438400000007",
            "name_prefix": "devops-project-eks-cluster-dev",
            "owner_id": "769265544200",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-eks-cluster-sg-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-eks-cluster-sg-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c5f197e1ba8ff33"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "a6cf5199",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769265544200:security-group/sg-09bf669ee7fa1d529",
            "description": "Security group for EKS cluster control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09bf669ee7fa1d529",
            "ingress": [],
            "name": "devops-project-eks-cluster-dev20260515232344109600000001",
            "name_prefix": "devops-project-eks-cluster-dev",
            "owner_id": "769265544200",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "devops-project-eks-cluster-sg-dev",
              "Project": "devops-project"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-eks-cluster-sg-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-08453b02e36efe385"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k3s_agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769265544200:security-group/sg-0ef6b2a0240f5c8f1",
            "description": "Security group for K3s agent nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef6b2a0240f5c8f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Flannel VXLAN",
                "from_port": 8472,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 8472
              },
              {
                "cidr_blocks": [],
                "description": "Kubelet",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Pod overlay UDP",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Pod overlay",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "WireGuard",
                "from_port": 51820,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 51820
              }
            ],
            "name": "devops-project-k3s-agent-dev20260516103556311200000006",
            "name_prefix": "devops-project-k3s-agent-dev",
            "owner_id": "769265544200",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-k3s-agent-sg-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-k3s-agent-sg-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c5f197e1ba8ff33"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "eb2cfc10",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769265544200:security-group/sg-087be20753021351e",
            "description": "Security group for K3s agent nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087be20753021351e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Flannel VXLAN",
                "from_port": 8472,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 8472
              },
              {
                "cidr_blocks": [],
                "description": "Kubelet",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Pod overlay UDP",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Pod overlay",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "WireGuard",
                "from_port": 51820,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 51820
              }
            ],
            "name": "devops-project-k3s-agent-dev20260515215430021000000002",
            "name_prefix": "devops-project-k3s-agent-dev",
            "owner_id": "769265544200",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "devops-project-k3s-agent-sg-dev",
              "Project": "devops-project"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-k3s-agent-sg-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-08453b02e36efe385"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k3s_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769265544200:security-group/sg-0ca0d9a2d4b5c242d",
            "description": "Security group for K3s server (master)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca0d9a2d4b5c242d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Flannel VXLAN",
                "from_port": 8472,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-0ef6b2a0240f5c8f1"
                ],
                "self": false,
                "to_port": 8472
              },
              {
                "cidr_blocks": [],
                "description": "K3s API Server (kubelet)",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ef6b2a0240f5c8f1"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "K3s server port",
                "from_port": 6444,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ef6b2a0240f5c8f1"
                ],
                "self": false,
                "to_port": 6444
              },
              {
                "cidr_blocks": [],
                "description": "NodePort range",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0db484d2e9121cd0f"
                ],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "WireGuard",
                "from_port": 51820,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-0ef6b2a0240f5c8f1"
                ],
                "self": false,
                "to_port": 51820
              }
            ],
            "name": "devops-project-k3s-server-dev20260516103600271300000009",
            "name_prefix": "devops-project-k3s-server-dev",
            "owner_id": "769265544200",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-k3s-server-sg-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-k3s-server-sg-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c5f197e1ba8ff33"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.k3s_agent",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "7a3eaab2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769265544200:security-group/sg-03b27f53dc1f444ba",
            "description": "Security group for K3s server (master)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b27f53dc1f444ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Flannel VXLAN",
                "from_port": 8472,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-087be20753021351e"
                ],
                "self": false,
                "to_port": 8472
              },
              {
                "cidr_blocks": [],
                "description": "K3s API Server (kubelet)",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-087be20753021351e"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "K3s server port",
                "from_port": 6444,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-087be20753021351e"
                ],
                "self": false,
                "to_port": 6444
              },
              {
                "cidr_blocks": [],
                "description": "NodePort range",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07fb40f6c993a1b0a"
                ],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "WireGuard",
                "from_port": 51820,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-087be20753021351e"
                ],
                "self": false,
                "to_port": 51820
              }
            ],
            "name": "devops-project-k3s-server-dev20260515215434473000000003",
            "name_prefix": "devops-project-k3s-server-dev",
            "owner_id": "769265544200",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "devops-project-k3s-server-sg-dev",
              "Project": "devops-project"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-k3s-server-sg-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-08453b02e36efe385"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.k3s_agent",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769265544200:security-group/sg-0143c14a60fc5c2cc",
            "description": "Security group pour RDS MySQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0143c14a60fc5c2cc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL depuis les pods K3s",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ca0d9a2d4b5c242d",
                  "sg-0ef6b2a0240f5c8f1"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "devops-project-rds-dev2026051610360489900000000b",
            "name_prefix": "devops-project-rds-dev",
            "owner_id": "769265544200",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-rds-sg-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-rds-sg-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c5f197e1ba8ff33"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.k3s_agent",
            "aws_security_group.k3s_server",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "aa74672a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769265544200:security-group/sg-08db3a5940e73e86c",
            "description": "Security group pour RDS MySQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08db3a5940e73e86c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL depuis les pods K3s",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03b27f53dc1f444ba",
                  "sg-087be20753021351e"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "devops-project-rds-dev20260515215438230400000004",
            "name_prefix": "devops-project-rds-dev",
            "owner_id": "769265544200",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "devops-project-rds-sg-dev",
              "Project": "devops-project"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-rds-sg-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-08453b02e36efe385"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.k3s_agent",
            "aws_security_group.k3s_server",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769265544200:subnet/subnet-0645c7af9628b44a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0645c7af9628b44a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "769265544200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-private-us-east-1a",
              "Project": "devops-project",
              "Team": "devops",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-private-us-east-1a",
              "Project": "devops-project",
              "Team": "devops",
              "Type": "private"
            },
            "vpc_id": "vpc-07c5f197e1ba8ff33"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 0,
          "deposed": "5fa68f7b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769265544200:subnet/subnet-0795889bcce791609",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0795889bcce791609",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "769265544200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-project-private-us-east-1a",
              "Project": "devops-project",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-private-us-east-1a",
              "Project": "devops-project",
              "Team": "devops",
              "Type": "private"
            },
            "vpc_id": "vpc-08453b02e36efe385"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769265544200:subnet/subnet-06032ee9bbd409a88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06032ee9bbd409a88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "769265544200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-private-us-east-1b",
              "Project": "devops-project",
              "Team": "devops",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-private-us-east-1b",
              "Project": "devops-project",
              "Team": "devops",
              "Type": "private"
            },
            "vpc_id": "vpc-07c5f197e1ba8ff33"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "deposed": "cf114c1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769265544200:subnet/subnet-0fab62f45c3383b67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fab62f45c3383b67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "769265544200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-project-private-us-east-1b",
              "Project": "devops-project",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-private-us-east-1b",
              "Project": "devops-project",
              "Team": "devops",
              "Type": "private"
            },
            "vpc_id": "vpc-08453b02e36efe385"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769265544200:subnet/subnet-04a6403dd1e7386a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a6403dd1e7386a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "769265544200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-private-us-east-1c",
              "Project": "devops-project",
              "Team": "devops",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-private-us-east-1c",
              "Project": "devops-project",
              "Team": "devops",
              "Type": "private"
            },
            "vpc_id": "vpc-07c5f197e1ba8ff33"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "deposed": "889a914d",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769265544200:subnet/subnet-0edcaad802a0bed6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edcaad802a0bed6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "769265544200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-project-private-us-east-1c",
              "Project": "devops-project",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-private-us-east-1c",
              "Project": "devops-project",
              "Team": "devops",
              "Type": "private"
            },
            "vpc_id": "vpc-08453b02e36efe385"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769265544200:subnet/subnet-08ec32cd1360098e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ec32cd1360098e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "769265544200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-public-us-east-1a",
              "Project": "devops-project",
              "Team": "devops",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-public-us-east-1a",
              "Project": "devops-project",
              "Team": "devops",
              "Type": "public"
            },
            "vpc_id": "vpc-07c5f197e1ba8ff33"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769265544200:subnet/subnet-00200caabb5439399",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00200caabb5439399",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "769265544200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-public-us-east-1b",
              "Project": "devops-project",
              "Team": "devops",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-public-us-east-1b",
              "Project": "devops-project",
              "Team": "devops",
              "Type": "public"
            },
            "vpc_id": "vpc-07c5f197e1ba8ff33"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769265544200:subnet/subnet-094525b7904594e1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094525b7904594e1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "769265544200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-public-us-east-1c",
              "Project": "devops-project",
              "Team": "devops",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-public-us-east-1c",
              "Project": "devops-project",
              "Team": "devops",
              "Type": "public"
            },
            "vpc_id": "vpc-07c5f197e1ba8ff33"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769265544200:vpc/vpc-07c5f197e1ba8ff33",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cf41cc9b8ee06cbf",
            "default_route_table_id": "rtb-08483ac987c9ece08",
            "default_security_group_id": "sg-0e06eaf1e9d1b9bac",
            "dhcp_options_id": "dopt-0b8208be971aed42d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07c5f197e1ba8ff33",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08483ac987c9ece08",
            "owner_id": "769265544200",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-vpc-dev",
              "Project": "devops-project",
              "Team": "devops"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "devops-project-vpc-dev",
              "Project": "devops-project",
              "Team": "devops"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}